# Cpp-Periodic-Task

./: .clang-format  CMakeLists.txt  Makefile  README.MD  lint.sh
include/: Sleep.hpp  StatisticsStatic.hpp  TaskCycle.hpp  TimespecHelper.hpp
src/: main.cpp  main.hpp
src/include/: Sleep.hpp  Statistics.hpp  StatisticsStatic.hpp  TaskCycle.hpp  sleep.hpp  timestamp.hpp
test/: CMakeLists.txt
test/cycle-test/: cycle-test.cpp  cycle-test.hpp
