cmake_minimum_required(VERSION 3.13)

set(TEST_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

set(PROJECT_NAME_CYCLE_TEST "cycle-test")
set(DIR_CYCLE_TEST "${TEST_DIR}/cycle-test")
set(OUTPUT_BIN_CYCLE_TEST "${PROJECT_NAME_CYCLE_TEST}")
set(SOURCE_BIN_CYCLE_TEST "${DIR_CYCLE_TEST}/${PROJECT_NAME_CYCLE_TEST}.cpp")
add_executable("${OUTPUT_BIN_CYCLE_TEST}" "${SOURCE_BIN_CYCLE_TEST}")
get_target_property(COMPILE_OPTIONS "${OUTPUT_BIN_CYCLE_TEST}" COMPILE_OPTIONS)
message("[COMPILE OPTIONS ${PROJECT_NAME_CYCLE_TEST}]: ${COMPILE_OPTIONS}")
